--- a/TrainAssistant/app.config
+++ b/TrainAssistant/app.config
@@ -5,7 +5,7 @@
   </startup>
   <appSettings>
     <!--登录随机参数-->
-    <add key="LoginRadomParamUrl" value="https://kyfw.12306.cn/otn/login/init"/>
+    <add key="LoginRandomParamUrl" value="https://kyfw.12306.cn/otn/login/init"/>
     <!--登录验证码-->
     <add key="LoginValidateCodeImageUrl" value="https://kyfw.12306.cn/otn/passcodeNew/getPassCodeNew?module=login"/>
     <!--登录验证码检验-->
@@ -20,6 +20,8 @@
     <add key="GetLoginUserNameUrl" value="https://kyfw.12306.cn/otn/index/init"/>
     <!--注销-->
     <add key="LogoutUrl" value="https://kyfw.12306.cn/otn/login/loginOut" />
+    <!--预订随机参数-->
+    <add key="QueryRandomParamUrl" value="https://kyfw.12306.cn/otn/leftTicket/init"/>
     <!--查票-->
     <add key="QueryTicketUrl" value="https://kyfw.12306.cn/otn/leftTicket/queryT"/>
     <!--联系人-->
