1.（待修复）【自动提交订单】功能；2.添加我的订单实体类。

--- a/TrainAssistant/TrainAssistant.csproj
+++ b/TrainAssistant/TrainAssistant.csproj
@@ -96,6 +96,8 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Models\OrderQueue.cs" />
+    <Compile Include="Models\Orders.cs" />
+    <Compile Include="Models\OrderTicketInfos.cs" />
     <Compile Include="Models\Query.cs" />
     <Compile Include="Models\QueryOrderWaitTime.cs">
       <SubType>Code</SubType>
