--- a/TrainAssistant/app.config
+++ b/TrainAssistant/app.config
@@ -50,5 +50,9 @@
     <add key="GetQueueCountAsyncUrl" value="https://kyfw.12306.cn/otn/confirmPassenger/getQueueCountAsync"/>
     <!--自动提交订单-确认订单-->
     <add key="ConfirmAutoSubmitOrderUrl" value="https://kyfw.12306.cn/otn/confirmPassenger/confirmSingleForQueueAsys"/>
+    <!--我的订单-->
+    <add key="MyOrderUrl" value="https://kyfw.12306.cn/otn/queryOrder/queryMyOrderNoComplete?_json_att="/>
+    <!--取消订单 _json_att	,cancel_flag	cancel_order,sequence_no	E842185692.  "data":{"existError":"N"},-->
+    <add key="CancelOrderUrl" value="https://kyfw.12306.cn/otn/queryOrder/cancelNoCompleteMyOrder"/>
   </appSettings>
 </configuration>
