--- a/TrainAssistant/TrainAssistant.csproj
+++ b/TrainAssistant/TrainAssistant.csproj
@@ -96,7 +96,9 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Models\OrderQueue.cs" />
-    <Compile Include="Models\Orders.cs" />
+    <Compile Include="Models\Orders.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Models\OrderTicketInfos.cs" />
     <Compile Include="Models\Query.cs" />
     <Compile Include="Models\QueryOrderWaitTime.cs">
