修复无法登录问题

--- a/TrainAssistant/app.config
+++ b/TrainAssistant/app.config
@@ -8,6 +8,8 @@
     <add key="LoginRandomParamUrl" value="https://kyfw.12306.cn/otn/login/init"/>
     <!--登录验证码-->
     <add key="LoginValidateCodeImageUrl" value="https://kyfw.12306.cn/otn/passcodeNew/getPassCodeNew?module=login"/>
+    <!--检验验证码-->
+    <add key="CheckVerifyCode" value="https://kyfw.12306.cn/otn/passcodeNew/checkRandCodeAnsyn"/>
     <!--用户注册-->
     <add key="UserRegisterUrl" value="https://kyfw.12306.cn/otn/regist/init"/>
     <!--忘记密码-->
