修复车票查询url问题

--- a/TrainAssistant/app.config
+++ b/TrainAssistant/app.config
@@ -23,7 +23,7 @@
     <!--预订随机参数-->
     <add key="QueryRandomParamUrl" value="https://kyfw.12306.cn/otn/leftTicket/init"/>
     <!--查票-->
-    <add key="QueryTicketUrl" value="https://kyfw.12306.cn/otn/leftTicket/queryT"/>
+    <add key="QueryTicketUrl" value="https://kyfw.12306.cn/otn"/>
     <!--联系人-->
     <add key="ContactUrl" value="https://kyfw.12306.cn/otn/passengers/query"/>
     <!--车票价格-->
